# bRenderer

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindVMMLib.cmake  FindbRenderer.cmake  Utils.cmake  bRenderer.cmake
CMake/old/: FindFreetypeGL.cmake  FindLibObj.cmake
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt
examples/demo/data/: cave.mtl  cave_stream.mtl
examples/demo/src/: RenderProject.cpp
examples/demo/src/desktop/: main.cpp
external-src/: CMakeLists.txt
external-src/01_jsoncpp/: CMakeLists.txt
external-src/02_libobj/: CMakeLists.txt
external-src/03_glfw/: CMakeLists.txt
external-src/04_freetype-gl/: CMakeLists.txt  freetype-gl.h
external-src/04_freetype-gl/freetype-gl/: opengl.h
include/: bRenderer.h
include/bRenderer/: Font.h  Input.h  OBJLoader.h
src/: CMakeLists.txt  Camera.cpp  Configuration.cpp  CubeMap.cpp  DepthMap.cpp  Font.cpp  Framebuffer.cpp  Geometry.cpp  Logger.cpp  Material.cpp  MatrixStack.cpp  Model.cpp  ModelData.cpp  ModelRenderer.cpp  OBJLoader.cpp  ObjectManager.cpp  RenderQueue.cpp  Renderer.cpp  Shader.cpp  ShaderDataFile.cpp  ShaderDataGenerator.cpp  ShaderSource.cpp  Sprite.cpp  TextSprite.cpp  Texture.cpp  TextureData.cpp
src/platform/desktop/: FileHandler_desktop.cpp  Input_desktop.cpp  Renderer_desktop.cpp  TextureData_desktop.cpp  View_desktop.cpp
src/platform/ios/: BView.h  BView.mm  FileHandler_ios.mm  Input_ios.mm  Renderer_ios.mm  TextureData_ios.mm  View_ios.mm
